--- a/electricast/src/app/appliances-list/appliances-list.page.html
+++ b/electricast/src/app/appliances-list/appliances-list.page.html
@@ -5,27 +5,27 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card *ngFor="let key of objectKeys(appliances)">
-    <ion-card-header>
-      <ion-item>
-        <ion-icon name="{{appliances[key].icon}}" slot="start"></ion-icon>
-        <ion-card-title>{{appliances[key].name}}</ion-card-title>
-        <ion-toggle checked="{{appliances[key].status}}" slot="end" (ionChange)="toggleAppliance(key)"></ion-toggle>
-      </ion-item>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-icon name="flash" slot="start"></ion-icon>
-        <ion-label>Power consumed: {{appliances[key].wattage}}</ion-label>
-      </ion-item>
+  <ion-item href="/appliance-details/{{key}}" *ngFor="let key of objectKeys(appliances)" detail=true>
+    <ion-card>
+      <ion-card-header>
+        
+        <ion-card-title>
+          <ion-icon name="{{appliances[key].icon}}"></ion-icon>
+          {{appliances[key].name}}
+        </ion-card-title>
+        <!-- <ion-toggle checked="{{appliances[key].status}}" slot="end" (ionChange)="toggleAppliance(key)"></ion-toggle> -->
+      </ion-card-header>
 
-      <ion-item>
-        <ion-icon name="alarm" slot="start"></ion-icon>
-        <ion-label>Time used: {{(timeUsedInHuman[key])}}</ion-label>
-      </ion-item>
-      <ion-progress-bar value="{{powersUsed[key]/totalPower}}"></ion-progress-bar>
-    </ion-card-content>
-  </ion-card>
+      <ion-card-content>
+        <ion-progress-bar value="{{powersUsed[key]/totalPower}}"></ion-progress-bar>
+        <br>
+        <span>Power used: {{powersUsed[key]}} kWh</span>
+        <br>
+        <span *ngIf="appliances[key].status == true">Status: Running</span>
+        <span *ngIf="appliances[key].status == false">Status: Off</span>
+      </ion-card-content>
+    </ion-card>
+  </ion-item>
 </ion-content>
 
 <ion-tab-bar slot="bottom">
