--- a/electricast/src/app/appliances-list/appliances-list.page.html
+++ b/electricast/src/app/appliances-list/appliances-list.page.html
@@ -34,7 +34,7 @@
     <ion-label>Dashboard</ion-label>
   </ion-tab-button>
 
-  <ion-tab-button href="/appliances-list" selected=true>
+  <ion-tab-button href="/appliances-list" class="active">
     <ion-icon name="bulb"></ion-icon>
     <ion-label>Appliances</ion-label>
   </ion-tab-button>
