--- a/electricast/src/app/appliance-details/appliance-details.page.html
+++ b/electricast/src/app/appliance-details/appliance-details.page.html
@@ -7,17 +7,17 @@
 <ion-content padding>
   <ion-card>
     <ion-card-header>
-      <ion-item>
-        <ion-icon name="{{appliance.icon}}" slot="start"></ion-icon>
+      <ion-item lines="none">
         <ion-card-title>{{appliance.name}}</ion-card-title>
         <ion-toggle checked="{{appliance.status}}" slot="end" (ionChange)="toggleAppliance(applianceIndex)"></ion-toggle>
       </ion-item>
+      <ion-card-subtitle>Here you can set the wattage of the appliance.</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-item>
+      <ion-item lines="false">
         <ion-icon name="alarm" slot="start"></ion-icon>
-        <ion-label>Time used: {{timeUsedInHuman}}</ion-label>
+        <ion-label>{{timeUsedInHuman}}</ion-label>
       </ion-item>
       <ion-item lines="none">
         <ion-label position="fixed">
@@ -26,7 +26,7 @@
         <ion-input type="number" required=true [(ngModel)]="appliance.wattage"></ion-input>
       </ion-item>
       <ion-item lines="none">
-        <ion-button color="danger" (click)="defaultWattage()">Default</ion-button>
+        <ion-button color="danger" (click)="defaultWattage(applianceIndex)">Default</ion-button>
         <ion-button color="light" (click)="resetWattage()">Reset</ion-button>
         <ion-button (click)="updateWattage()">Save</ion-button>
       </ion-item>
@@ -40,7 +40,7 @@
     <ion-label>Dashboard</ion-label>
   </ion-tab-button>
 
-  <ion-tab-button href="/appliances-list" selected=true>
+  <ion-tab-button href="/appliances-list" class="active">
     <ion-icon name="bulb"></ion-icon>
     <ion-label>Appliances</ion-label>
   </ion-tab-button>
