--- a/electricast/src/app/appliance-details/appliance-details.page.scss
+++ b/electricast/src/app/appliance-details/appliance-details.page.scss
@@ -1,3 +1,13 @@
 ion-input {
-	border: 1px solid #DDD;
+  border: 1px solid #DDD;
+}
+
+ion-tab-bar {
+  ion-tab-button {
+    color: #666;
+
+  }
+  ion-tab-button.active {
+    color: #3880ff;
+  }
 }
