--- a/electricast/src/app/appliances-list/appliances-list.page.scss
+++ b/electricast/src/app/appliances-list/appliances-list.page.scss
@@ -1,3 +1,13 @@
 ion-card {
-	width: 100%;
+  width: 100%;
+}
+
+ion-tab-bar {
+  ion-tab-button {
+    color: #666;
+
+  }
+  ion-tab-button.active {
+    color: #3880ff;
+  }
 }
