--- a/electricast/src/app/app.component.html
+++ b/electricast/src/app/app.component.html
@@ -1,3 +1,10 @@
 <ion-app>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>
+        {{title}}
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
