--- a/electricast/src/app/appliances-list/appliances-list.page.html
+++ b/electricast/src/app/appliances-list/appliances-list.page.html
@@ -10,7 +10,7 @@
       <ion-card-header>
         
         <ion-card-title>
-          <ion-icon name="{{appliances[key].icon}}"></ion-icon>
+          <img class="item-icon" src="assets/{{appliances[key].icon}}.png">
           {{appliances[key].name}}
         </ion-card-title>
         <!-- <ion-toggle checked="{{appliances[key].status}}" slot="end" (ionChange)="toggleAppliance(key)"></ion-toggle> -->
