--- a/electricast/src/app/appliances-list/appliances-list.page.html
+++ b/electricast/src/app/appliances-list/appliances-list.page.html
@@ -26,6 +26,11 @@
       </ion-card-content>
     </ion-card>
   </ion-item>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="addAppliance()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
 
 <ion-tab-bar slot="bottom">
