--- a/electricast/src/app/home/home.page.html
+++ b/electricast/src/app/home/home.page.html
@@ -38,7 +38,10 @@
     </ion-card-header>
     <ion-card-content class="button-list">
       <ion-button *ngFor="let key of objectKeys(appliances)" color="{{appliances[key].status ? 'primary' : 'light'}}" (click)="toggleAppliance(key)">
-        <img src="assets/{{appliances[key].icon}}.png">
+        <div class="button-content">
+          <img src="assets/{{appliances[key].icon}}.png">
+          <span>{{appliances[key].name}}</span>
+        </div>
       </ion-button>
     </ion-card-content>
   </ion-card>
