Branch for monthly reset

--- a/electricast/src/app/home/home.page.html
+++ b/electricast/src/app/home/home.page.html
@@ -29,6 +29,9 @@
         <ion-icon name="cash" slot="start"></ion-icon>
         Bill goes up by ₱{{runningBillRate}} per hour
       </ion-item>
+      <ion-item lines="none">
+        Last Month Bill: ₱{{lastMonthBill}}
+      </ion-item>
     </ion-card-content>
   </ion-card>
   <ion-card>
