--- a/electricast/src/app/modals/add-appliance/add-appliance.page.html
+++ b/electricast/src/app/modals/add-appliance/add-appliance.page.html
@@ -12,11 +12,28 @@
   <ion-item>
     <ion-label>Type of Appliance</ion-label>
     <ion-select [(ngModel)]="appliance.type">
-      <ion-select-option value="1">Light Bulb</ion-select-option>
-      <ion-select-option value="2">Electric Fan</ion-select-option>
-      <ion-select-option value="3">Rice Cooker</ion-select-option>
-      <ion-select-option value="4">TV</ion-select-option>
-      <ion-select-option value="5">Refrigerator</ion-select-option>
+      <ion-select-option value="0">aircon</ion-select-option>
+      <ion-select-option value="1">blender</ion-select-option>
+      <ion-select-option value="2">bulb</ion-select-option>
+      <ion-select-option value="3">clothes-iron</ion-select-option>
+      <ion-select-option value="4">coffee-maker</ion-select-option>
+      <ion-select-option value="5">dish-washer</ion-select-option>
+      <ion-select-option value="6">dryer</ion-select-option>
+      <ion-select-option value="7">electric-stove</ion-select-option>
+      <ion-select-option value="8">fan</ion-select-option>
+      <ion-select-option value="">hair-dryer</ion-select-option>
+      <ion-select-option value="">hair-iron</ion-select-option>
+      <ion-select-option value="">microwave</ion-select-option>
+      <ion-select-option value="">others</ion-select-option>
+      <ion-select-option value="">oven</ion-select-option>
+      <ion-select-option value="">radiator</ion-select-option>
+      <ion-select-option value="">refrigerator</ion-select-option>
+      <ion-select-option value="">rice-cooker</ion-select-option>
+      <ion-select-option value="">toaster</ion-select-option>
+      <ion-select-option value="">tv</ion-select-option>
+      <ion-select-option value="">vacuum</ion-select-option>
+      <ion-select-option value="">washing-machine</ion-select-option>
+      'water-heater'
     </ion-select>
   </ion-item>
 
