--- a/electricast/src/app/appliance-details/appliance-details.page.html
+++ b/electricast/src/app/appliance-details/appliance-details.page.html
@@ -26,10 +26,16 @@
         <ion-input type="number" required=true [(ngModel)]="appliance.wattage"></ion-input>
       </ion-item>
       <ion-item lines="none">
-        <ion-button color="danger" (click)="defaultWattage(applianceIndex)">Default</ion-button>
+        Show in dashboard
+        <ion-toggle checked="{{appliance.showInHome}}" slot="end" (ionChange)="toggleHomeDisplay(applianceIndex)"></ion-toggle>
+      </ion-item>
+      
+      <ion-item lines="none">
+        <ion-button (click)="defaultWattage(applianceIndex)">Default</ion-button>
         <ion-button color="light" (click)="resetWattage()">Reset</ion-button>
         <ion-button (click)="updateWattage()">Save</ion-button>
       </ion-item>
+      <ion-button color="danger" (click)="deleteAppliance()">Delete</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
